Created Documentation File and submodule the dataset repository

--- a/docs/Dataset_EDA.ipynb
+++ b/docs/Dataset_EDA.ipynb
@@ -41,12 +41,40 @@
    "id": "68ef307c4954f99"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T12:58:22.930102Z",
+     "start_time": "2024-12-11T12:58:22.199857Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import dbcollection as dbc\n",
+    "LSPe  = dbc.load('LSPe')"
+   ],
+   "id": "115f6f46f0c7309c",
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dbcollection'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mdbcollection\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mdbc\u001B[39;00m\n\u001B[0;32m      2\u001B[0m LSPe  \u001B[38;5;241m=\u001B[39m dbc\u001B[38;5;241m.\u001B[39mload(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mLSPe\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'dbcollection'"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "\n",
-   "id": "115f6f46f0c7309c"
+   "source": "",
+   "id": "b42e2c5503dd593b"
   }
  ],
  "metadata": {
