--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-12T10:17:17.342892Z",
-     "start_time": "2025-01-12T10:17:17.328645Z"
+     "end_time": "2025-01-15T09:38:11.240841Z",
+     "start_time": "2025-01-15T09:38:06.718229Z"
     }
    },
    "source": [
@@ -28,27 +28,15 @@
     "from hik.data.scene import Scene\n",
     "from hik.vis.pose import get_meta"
    ],
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'hik.data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[6], line 17\u001B[0m\n\u001B[1;32m     14\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mnetworkx\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mnx\u001B[39;00m\n\u001B[1;32m     15\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[0;32m---> 17\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mhik\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdata\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mscene\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Scene\n\u001B[1;32m     18\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mhik\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mvis\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpose\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m get_meta\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'hik.data'"
-     ]
-    }
-   ],
-   "execution_count": 6
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-12T10:09:12.041404Z",
-     "start_time": "2025-01-12T10:09:12.026219Z"
+     "end_time": "2025-01-15T09:38:36.152471Z",
+     "start_time": "2025-01-15T09:38:11.245173Z"
     }
    },
    "source": [
@@ -80,34 +68,30 @@
    ],
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Scene' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[4], line 11\u001B[0m\n\u001B[1;32m      8\u001B[0m sample_length \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m30\u001B[39m\n\u001B[1;32m     10\u001B[0m \u001B[38;5;66;03m# Load Scene object\u001B[39;00m\n\u001B[0;32m---> 11\u001B[0m scene \u001B[38;5;241m=\u001B[39m \u001B[43mScene\u001B[49m\u001B[38;5;241m.\u001B[39mload_from_paths(\n\u001B[1;32m     12\u001B[0m     dataset,\n\u001B[1;32m     13\u001B[0m     \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mdata_location\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m/poses/\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m     14\u001B[0m     \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mdata_location\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m/scenes/\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m     15\u001B[0m     \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mdata_location\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m/body_models/\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m     16\u001B[0m )\n\u001B[1;32m     18\u001B[0m \u001B[38;5;66;03m# Generate splits\u001B[39;00m\n\u001B[1;32m     19\u001B[0m splits \u001B[38;5;241m=\u001B[39m scene\u001B[38;5;241m.\u001B[39mget_splits(\n\u001B[1;32m     20\u001B[0m     length\u001B[38;5;241m=\u001B[39msample_length,\n\u001B[1;32m     21\u001B[0m     stepsize\u001B[38;5;241m=\u001B[39msample_length,\n\u001B[1;32m     22\u001B[0m )\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'Scene' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 319/319 [00:10<00:00, 29.16it/s]\n"
      ]
-    }
-   ],
-   "execution_count": 4
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "poses shape: (77364, 30, 3, 29)\n",
-      "masks shape: (77364, 30)\n",
-      "activities shape: (77364, 30, 82)\n"
+      "dict_keys(['poses3d', 'smpls', 'transforms', 'masks', 'activities', 'start_frames'])\n"
      ]
     }
    ],
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T09:38:39.903720Z",
+     "start_time": "2025-01-15T09:38:36.221347Z"
+    }
+   },
    "source": [
     "poses = rearrange(\n",
     "    splits[\"poses3d\"],\n",
@@ -127,21 +111,28 @@
     "print(\"poses shape:\", poses.shape)         # [N, n_frames, n_xyz, n_joints]\n",
     "print(\"masks shape:\", masks.shape)         # [N, n_frames]\n",
     "print(\"activities shape:\", activities.shape) # [N, n_frames, n_activities]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtered poses shape: (19026, 30, 3, 29)\n"
+      "poses shape: (77364, 30, 3, 29)\n",
+      "masks shape: (77364, 30)\n",
+      "activities shape: (77364, 30, 82)\n"
      ]
     }
    ],
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T09:42:22.825797Z",
+     "start_time": "2025-01-15T09:42:22.691500Z"
+    }
+   },
    "source": [
     "# Convert masks to bool, in case they're not already\n",
     "masks_bool = masks.astype(bool)\n",
@@ -154,12 +145,35 @@
     "activities = activities[sequences_to_keep]\n",
     "\n",
     "print(\"Filtered poses shape:\", poses.shape)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered poses shape: (19026, 30, 3, 29)\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T09:42:23.873520Z",
+     "start_time": "2025-01-15T09:42:23.865443Z"
+    }
+   },
+   "source": [
+    "downsample_rate = 6\n",
+    "poses_downsampled = poses[:, ::downsample_rate, :, :]\n",
+    "masks_downsampled = masks[:, ::downsample_rate]\n",
+    "activities_downsampled = activities[:, ::downsample_rate, :]\n",
+    "\n",
+    "print(\"Downsampled poses shape:\", poses_downsampled.shape)\n",
+    "# e.g. [N, 5, 3, 29] if your sample_length was 30"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -169,29 +183,16 @@
      ]
     }
    ],
-   "source": [
-    "downsample_rate = 6\n",
-    "poses_downsampled = poses[:, ::downsample_rate, :, :]\n",
-    "masks_downsampled = masks[:, ::downsample_rate]\n",
-    "activities_downsampled = activities[:, ::downsample_rate, :]\n",
-    "\n",
-    "print(\"Downsampled poses shape:\", poses_downsampled.shape)\n",
-    "# e.g. [N, 5, 3, 29] if your sample_length was 30"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Center frame activity labels shape: (19026, 82)\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T09:42:24.540342Z",
+     "start_time": "2025-01-15T09:42:24.531518Z"
     }
-   ],
+   },
    "source": [
     "L = poses_downsampled.shape[1]  # number of frames after downsampling\n",
     "center_frame_idx = L // 2\n",
@@ -201,45 +202,63 @@
     "\n",
     "print(\"Center frame activity labels shape:\", activities_center.shape)\n",
     "# [N, n_activities]"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Center frame activity labels shape: (19026, 82)\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T09:42:41.508577Z",
+     "start_time": "2025-01-15T09:42:41.504193Z"
+    }
+   },
    "source": [
-    "body_edges = [\n",
-    "            (1, 0),\n",
-    "            (0, 2),\n",
-    "            (1, 4),\n",
-    "            (4, 7),\n",
-    "            (7, 10),\n",
-    "            (2, 5),\n",
-    "            (5, 8),\n",
-    "            (8, 11),\n",
-    "            (16, 18),\n",
-    "            (18, 20),\n",
-    "            (17, 19),\n",
-    "            (19, 21),\n",
-    "            (16, 13),\n",
-    "            (17, 14),\n",
-    "            (13, 12),\n",
-    "            (14, 12),\n",
-    "            (12, 15),\n",
-    "            (15, 23),\n",
-    "            (24, 25),\n",
-    "            (24, 26),\n",
-    "            (25, 27),\n",
-    "            (26, 28),\n",
-    "        ]"
-   ]
+    "body_edges= [\n",
+    "    (1, 0),\n",
+    "    (0, 2),\n",
+    "    (1, 4),\n",
+    "    (4, 7),\n",
+    "    (7, 10),\n",
+    "    (2, 5),\n",
+    "    (5, 8),\n",
+    "    (8, 11),\n",
+    "    (16, 18),\n",
+    "    (18, 20),\n",
+    "    (17, 19),\n",
+    "    (19, 21),\n",
+    "    (16, 13),\n",
+    "    (17, 14),\n",
+    "    (13, 12),\n",
+    "    (14, 12),\n",
+    "    (12, 15),\n",
+    "    (15, 23),\n",
+    "    (24, 25),\n",
+    "    (24, 26),\n",
+    "    (25, 27),\n",
+    "    (26, 28),\n",
+    "]"
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T09:42:43.536852Z",
+     "start_time": "2025-01-15T09:42:43.527779Z"
+    }
+   },
    "source": [
     "def build_spatio_temporal_edges(n_frames, n_joints, body_edges):\n",
     "    \"\"\"\n",
@@ -263,13 +282,18 @@
     "                edges.append((node_next, node_current))\n",
     "\n",
     "    return edges\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-15T09:42:45.796798Z",
+     "start_time": "2025-01-15T09:42:45.786261Z"
+    }
+   },
    "source": [
     "def build_graph_data(pose_sequence):\n",
     "    \"\"\"\n",
@@ -298,7 +322,9 @@
     "    # Convert edges to PyTorch tensors\n",
     "    edge_index = torch.LongTensor(edges).T  # shape [2, #edges]\n",
     "    return torch.FloatTensor(node_features), edge_index\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "cell_type": "code",
